# pyopenbadges

./: .gitignore  README.fr.md  README.md  SPECIFICATION.fr.md  SPECIFICATION.md  TESTS.fr.md  TESTS.md  TODO_Fediverse.en.md  TODO_Fediverse.md  TODO_JWT_Support.en.md  TODO_JWT_Support.md  TODO_Steganography.en.md  TODO_Steganography.md  TUTORIAL.crypto.md  TUTORIAL.fr.md  TUTORIAL.md  TUTORIAL.schema.md  __init__.py  pyproject.toml
examples/: crypto_example.py
models/: __init__.py
pyopenbadges/crypto/: signing.py
pyopenbadges/models/: credential.py
tests/: __init__.py  test_achievement.py  test_credential.py  test_credential_crypto.py  test_credential_schema.py  test_crypto_integration.py  test_endorsement.py  test_profile.py
tests/test_crypto/: test_keys.py  test_signing.py  test_verification.py
